Fix right alignment for fixed width

--- a/src/component/header.scss
+++ b/src/component/header.scss
@@ -165,6 +165,7 @@ $tablet: 40.0625em;
 	&:hover {
 		color: $govuk-blue;
 	}
+
 }
 
 .datahub-header__navigation__item__link--active {
@@ -184,6 +185,12 @@ $tablet: 40.0625em;
 		max-width: 960px;
 		margin-left: auto;
 		margin-right: auto;
+	}
+
+	@media ( min-width: $tablet ){
+		.datahub-header__links__item:last-of-type {
+			padding-right: 0;
+		}
 	}
 }
 
